fixed hover issue on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -467,6 +467,20 @@ footer {
         padding-right: 30px;
     }
 
+    .project:active .project-wrapper:before {
+        opacity: 0.7;
+    }
+    
+    .project:active .project-img {
+        transform: scale(1.07);
+        filter: blur(5px);
+    }
+    
+    .project:active .project-description {
+        opacity: 1;
+        transform: translateY(-50%);
+    }
+
 }
 
 /* Small Phone */
@@ -515,6 +529,20 @@ footer {
         padding: 0;
         left: 0;
         width: 100%;
+    }
+
+    .project:active .project-wrapper:before {
+        opacity: 0.7;
+    }
+    
+    .project:active .project-img {
+        transform: scale(1.07);
+        filter: blur(5px);
+    }
+    
+    .project:active .project-description {
+        opacity: 1;
+        transform: translateY(-50%);
     }
 
     .footer-social-links {
